@@ -1,4 +1,4 @@
 DIST wagon-ssh-common-test-1.0.tar.bz2 4094 RMD160 03789aadf70a8a720cec56f922c0a4d8d5857b7a SHA1 ce3c27df2ac7cc21c5e47843226b5259dc55d543 SHA256 05a53187c658bea86cb68ede57a6b2721e3020d74d1d60953872ab332fb198ad
-EBUILD wagon-ssh-common-test-1.0.ebuild 878 RMD160 b3e102d79bbc7cc49454e92a562bc40ece16e461 SHA1 4e5852609c77163c7c19c9b0d75caf7e85627cb8 SHA256 0420e423d3fc5a6e8877f3e7b078d06786a8a83a6170d09d1636ddeab9d6e9bb
-MISC ChangeLog 556 RMD160 d5b256c313808412b14bafddccfb57b173043a6e SHA1 9f6997082e325bf6d5864ab2bbb9812305f3bdea SHA256 143df36d027737e320f3cf58848cdb58a3874abc6632d52e77b486a01f43cb21
+EBUILD wagon-ssh-common-test-1.0.ebuild 933 RMD160 ca45fb8531ea012cce627063b41f1b9745c0c364 SHA1 21e1c581b2c3912e1b09cf8ff8f60b1731a8bb08 SHA256 11a9a727d418a15ddbc1a496cacf34dab94eae39d8f06df53f1522c2ae2a9d61
+MISC ChangeLog 656 RMD160 26dad941066b7526fc707a9a39c0516554f14a64 SHA1 9bebde02146128753c073a9fcb5c3e7a95b52358 SHA256 2215b9db15da1d22726e69be86277e517a6974dc7915ad2eec8e0152cf7d1c8e
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
